<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user"
                android:contentDescription="@string/avatar" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/student_roll"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:drawablePadding="10dp"
        android:text="@string/student_roll_no"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_name"
        app:drawableLeftCompat="@drawable/ic_id" />

    <TextView
        android:id="@+id/student_year"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="10dp"
        android:text="@string/student_year"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/student_course"
        app:layout_constraintStart_toStartOf="@+id/student_course"
        app:drawableLeftCompat="@drawable/ic_id" />

    <TextView
        android:id="@+id/student_name"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/student_name"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <TextView
        android:id="@+id/student_birthday"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:text="@string/student_birthday"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_roll"
        app:drawableLeftCompat="@drawable/ic_birthday" />

    <TextView
        android:id="@+id/student_course"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="17dp"
        android:drawablePadding="10dp"
        android:text="@string/student_course"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/student_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_birthday"
        app:drawableStartCompat="@drawable/ic_course" />

    <TextView
        android:id="@+id/student_email"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:drawablePadding="10dp"
        android:text="@string/student_gmail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_birthday"
        app:drawableLeftCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/student_phone"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:text="@string/student_phone"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_email"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/teacher_address"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:drawablePadding="10dp"
        android:singleLine="true"
        android:text="@string/student_address"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_phone"
        app:drawableStartCompat="@drawable/ic_address" />

    <TextView
        android:id="@+id/textView12"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/about_me"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_address" />

    <TextView
        android:id="@+id/student_about"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/student_about"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>