<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/button_achievement"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_achievement"
        android:onClick="changeAchievementSelectLayout"
        android:drawablePadding="10sp"
        android:text="@string/achievement"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile"
        tools:ignore="UsingOnClickInXml"/>

    <Button
        android:id="@+id/button_profile"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="163dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10sp"
        android:text="@string/profile"
        android:onClick="changeStudentMainLayout"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_edit"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="10sp"
        android:onClick="changeUserEditLayout"
        android:text="@string/edit"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_achievement"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_sign_out"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_exist"
        android:drawablePadding="10sp"
        android:text="@string/sign_out"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />

    <ImageButton
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/transparent"
        android:onClick="changeStudentMainLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tab"
        android:contentDescription="@string/drawer_icon"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>