<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="360dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/user_name"
        style="@style/input_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_textedit"
        android:inputType="textPersonName"
        android:text="@string/student_name"
        app:layout_constraintBottom_toTopOf="@+id/user_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_birthday"
        style="@style/input_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_textedit"
        android:drawableStart="@drawable/ic_birthday"
        android:inputType="date"
        android:text="@string/student_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email"
        style="@style/input_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_textedit"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:text="@string/student_gmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_birthday" />

    <EditText
        android:id="@+id/user_phone"
        style="@style/input_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_textedit"
        android:drawableStart="@drawable/ic_phone"
        android:inputType="textPersonName"
        android:text="@string/student_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <EditText
        android:id="@+id/user_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_textedit"
        android:fontFamily="@font/font"
        android:inputType="textMultiLine"
        android:text="@string/student_about"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_save_user_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_address" />

    <Button
        android:id="@+id/button_save_user_edit"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:background="@drawable/button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_address"
        style="@style/input_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/rounded_textedit"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/student_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone" />

    <ImageButton
        android:id="@+id/button_drawer_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drawer_icon"
        android:onClick="changeDrawerUserLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tab"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>