<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/admin_name"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:text="@string/admin"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <ImageButton
        android:id="@+id/button_drawer_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drawer_icon"
        android:onClick="changeDrawerAdminLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tab"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/add_teacher"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/button_no_stoke"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="10dp"
        android:onClick="addTeacher"
        android:text="@string/add_teacher"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/admin_name"
        app:layout_constraintTop_toBottomOf="@+id/admin_name"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/add_student"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_no_stoke"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="10dp"
        android:onClick="addStudent"
        android:text="@string/add_student"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/add_teacher"
        app:layout_constraintTop_toBottomOf="@+id/add_teacher"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>